[asm,cmp] Fix layout issue

--- a/assembler/style.css
+++ b/assembler/style.css
@@ -1,7 +1,7 @@
 #main {
   margin-left: auto;
   margin-right: auto;
-  width: 1500px;
+  width: max-content;
 }
 
 #log {
